# sparql-relax

./: .gitignore  Cargo.toml  README.md  current-relax-all.csv  current-relax-calibration.csv  pyproject.toml  tutorial.ipynb
eval/: analyze_results.py  compare_results.py  current-diagnose-all.csv  current-relax-all.csv  eval_results.csv  pyproject.toml  run_eval.py  test_connect.py  test_relax.py
eval/Experiment_Results/: ref-code.py
eval/Experiment_Results/DA-KGQA/: gemini-flash-2.5.csv  llama.csv  o3-mini.csv
eval/Experiment_Results/ReAct(100)/: deepseek-r1.csv  gemini-flash-2.5.csv  llama.csv  o3-mini.csv  o4-mini.csv
eval/Experiment_Results/ReAct(5000)/: gemini-flash-2.5.csv  llama.csv  o3-mini.csv
eval/Experiment_Results/ReAct(noKG)/: gemini-flash-2.5.csv  llama.csv  o3-mini.csv
eval/buildings/: b59.ttl  bldg11.ttl
eval/buildings/ontologies/: 223p.ttl  Brick.ttl
sparql-relax-core/: Cargo.toml
sparql-relax-core/src/: algebra.rs  bfs.rs  connect.rs  diagnose.rs  error.rs  fanout.rs  lib.rs  query.rs  relax.rs
sparql-relax-core/tests/: diagnose_and_connect.rs  diagnose_and_relax.rs  query.rs
sparql-relax-mcp/: README.md  pyproject.toml
sparql-relax-mcp/src/sparql_relax_mcp/: server.py
sparql-relax-mcp/tests/: test_server.py  test_watchdog.py
sparql-relax-py/: Cargo.toml  README.md  pyproject.toml
sparql-relax-py/python/sparql_relax/: __init__.py
sparql-relax-py/python/sparql_relax_rs/: __init__.py
sparql-relax-py/src/: lib.rs
