[project]
name = "sparql-relax-mcp"
version = "0.1.0"
description = "MCP server exposing sparql_relax's SPARQL query execution and diagnosis over RDF graphs to AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "sparql-relax-rs",
]

[project.scripts]
sparql-relax-mcp = "sparql_relax_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparql_relax_mcp"]

[tool.uv.sources]
sparql-relax-rs = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
