[package]
name = "sparql-relax-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "_sparql_relax"
crate-type = ["cdylib"]

[dependencies]
oxigraph = { version = "0.5.9", default-features = false }
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311"] }
sparql-relax-core = { version = "0.1.0", path = "../sparql-relax-core" }
